RESOLVED FIXED Bug 202494
The CSS specificity of :host() pseudo-classes is wrong
https://bugs.webkit.org/show_bug.cgi?id=202494
Summary The CSS specificity of :host() pseudo-classes is wrong
Ryosuke Niwa
Reported 2019-10-02 14:22:40 PDT
The specificity of :host in WebKit does not match that of Chrome & Firefox. <rdar://problem/51963736>
Attachments
test case (431 bytes, text/html)
2019-10-03 06:11 PDT, Antti Koivisto
no flags
patch (3.16 KB, patch)
2020-08-18 06:32 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-10-03 06:11:10 PDT
Created attachment 380105 [details] test case
Antti Koivisto
Comment 2 2020-08-18 06:28:25 PDT
Antti Koivisto
Comment 3 2020-08-18 06:32:17 PDT
EWS
Comment 4 2020-08-18 07:45:17 PDT
Committed r265812: <https://trac.webkit.org/changeset/265812> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406780 [details].
Note You need to log in before you can comment on or make changes to this bug.