The CSS specificity of :host() pseudo-classes is wrong https://bugs.webkit.org/show_bug.cgi?id=202494 <rdar://problem/66292568>

Reviewed by Anders Carlsson.

Source/WebCore:

https://drafts.csswg.org/css-scoping/#host-selector

“The specificity of :host() is that of a pseudo-class, plus the specificity of its argument.”

* css/CSSSelector.cpp:
(WebCore::simpleSelectorSpecificityInternal):

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/228362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265812 268f45cc-cd09-0410-ab3c-d52691b4dbfc